# meshonator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260423_0001_initial.py  20260423_0002_node_num_bigint.py  20260424_0003_worker_heartbeats.py
docs/: ux-redesign-implementation-plan.md
scripts/: bootstrap.sh  deploy_prod_web.sh
src/meshonator/: app.py
src/meshonator/api/: app.py  schemas.py
src/meshonator/audit/: service.py
src/meshonator/auth/: security.py
src/meshonator/cli/: main.py
tests/: conftest.py
tests/api/: test_bulk_nodedb_queue.py  test_discovery_ui.py  test_groups_membership.py  test_health.py  test_jobs_audit_labels.py  test_login.py  test_node_detail_redaction.py  test_node_nodedb_queue.py  test_nodes_batch_configure.py  test_nodes_compare.py  test_nodes_favorite_all.py  test_settings_defaults.py  test_visibility_ui.py
tests/integration/: test_discovery_inventory_sync.py
tests/unit/: test_alignment_profile.py  test_batch_patch_utils.py  test_bulk_nodedb_job_queue.py  test_connection_lifecycle.py  test_default_settings_patch.py  test_diff.py  test_discovery_job_queue.py  test_fleet_baseline_patch.py  test_inventory_favorite_policy.py  test_inventory_node_id_upgrade.py  test_inventory_reachability.py  test_jobs_service.py  test_meshtastic_provider_apply_patch.py  test_meshtastic_provider_fetch_nodes.py  test_node_compare.py  test_provider_capabilities.py  test_tcp_scan.py  test_zero_hop_candidates.py
(+40 files in other folders)
