[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshonator"
version = "0.1.0"
description = "Web fleet manager for Meshtastic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.4",
  "jinja2>=3.1.4",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "apscheduler>=3.10.4",
  "orjson>=3.10.6",
  "passlib>=1.7.4",
  "python-dateutil>=2.9.0.post0",
  "PyYAML>=6.0.1",
  "meshtastic>=2.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.5",
  "mypy>=1.11.1"
]

[project.scripts]
meshonator = "meshonator.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
